gradethis doesn't allow child docs

--- a/030-010-exercise_1_prompt.Rmd
+++ b/030-010-exercise_1_prompt.Rmd
@@ -1,7 +1,7 @@
 Take a look at the `ebola` dataset.
 
 ```{r, echo=FALSE}
-.ebnola_ex1
+.ebola_ex1
 ```
 
 - Tidy the dataset such that you get the dataset below.
