--- a/010-setup.Rmd
+++ b/010-setup.Rmd
@@ -1,10 +1,3 @@
----
-title: "global_setup"
-author: "Daniel Chen"
-date: "11/7/2021"
-output: html_document
----
-
 ```{r setup, include=FALSE}
 library(tidyverse)
 library(medicaldata)
@@ -36,7 +29,7 @@ download.file("https://raw.githubusercontent.com/cmrivers/ebola/master/country_t
   rename(cases = Cases, deaths = Deaths)
 
 # ebola starting datasets for examples
-.ebnola_ex1 <- .ebola_baseline_tidy %>%
+.ebola_ex1 <- .ebola_baseline_tidy %>%
   drop_na() %>%
   select(-deaths) %>%
   pivot_wider(names_from = day, values_from = cases)
@@ -49,7 +42,7 @@ download.file("https://raw.githubusercontent.com/cmrivers/ebola/master/country_t
 
 # solution dataframes for each example
 
-solution_tidy1 <- .ebnola_ex1 %>%
+solution_tidy1 <- .ebola_ex1 %>%
   pivot_longer(`289`:last_col(), names_to = "day", values_to = "cases") %>%
   drop_na()
 
