--- a/030-blank_yesGradethis/030.Rmd
+++ b/030-blank_yesGradethis/030.Rmd
@@ -24,7 +24,14 @@ runtime: shiny_prerendered
 ```{r,  child="../030-020-exercise_1_blank.Rmd"}
 ```
 
-```{r,  child="../030-040-exercise_1_gradethis.Rmd"}
+```{r ex1-solution}
+ebola %>%
+  pivot_longer(`289`:last_col(), names_to = "day", values_to = "cases") %>%
+  drop_na()
+```
+
+```{r ex1-code-check}
+gradethis::grade_code()
 ```
 
 
@@ -39,6 +46,17 @@ runtime: shiny_prerendered
 ```{r, child="../040-030-exercise_2_blank.Rmd"}
 ```
 
+```{r ex2-solution}
+ebola %>%
+  pivot_longer(cols = c(-date, -day)) %>%
+  separate(name, into = c("case_death", "country"), sep = "_") %>%
+  drop_na()
+```
+
+```{r ex2-code-check}
+gradethis::grade_code()
+```
+
 ## Exercise 3
 
 ```{r, child="../050-010-exercise_3_setup.Rmd"}
@@ -48,6 +66,18 @@ runtime: shiny_prerendered
 ```
 
 ```{r, child="../050-030-exercise_3_blank.Rmd"}
+```
+
+```{r ex3-solution}
+ebola %>%
+  pivot_longer(cols = c(-date, -day)) %>%
+  separate(name, into = c("case_death", "country"), sep = "_") %>%
+  pivot_wider(names_from = case_death, values_from = value) %>%
+  drop_na()
+```
+
+```{r ex3-code-check}
+gradethis::grade_code()
 ```
 
 ## Summative
