--- a/030-040-exercise_1_gradethis.Rmd
+++ b/030-040-exercise_1_gradethis.Rmd
@@ -1,1 +1,9 @@
-<!-- gradethis doesn't support child docs (yet)-->
+```{r ex1-solution, eval=FALSE, echo=FALSE}
+ebola %>%
+  pivot_longer(`289`:last_col(), names_to = "day", values_to = "cases") %>%
+  drop_na()
+```
+
+```{r ex1-code-check, eval=FALSE, echo=FALSE}
+gradethis::grade_code()
+```
